--- a/page2.html
+++ b/page2.html
@@ -17,7 +17,7 @@
         <div class="home" 
         <ul>
             <a href="index.html">Home</a>
-            <a href="TEST.html">contact</a>
+            <a href="test.html">contact</a>
         </ul>
         </div>
     </div>
